[build-system]
requires = [ "hatchling", ]
build-backend = "hatchling.build"

[project]
name = "tools-matcher"
version = "0.1.0"
description = "A server providing tool matching capabilities based on sentence embeddings."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers",
    "numpy",
    "mcp", # Assuming package name is 'mcp'
    "mcp[server]>=1.6.0",
]

[project.scripts]
embedding-server = "embedding.server:main"

[tool.hatch.build.targets.wheel]
# packages = ["src/embedding"] # Previous setting
# Tell hatch that 'src' contains the actual packages
# Corrected syntax for force-include (standard table)
[tool.hatch.build.targets.wheel.force-include]
"src/embedding" = "embedding"
